--- a/css/index.css
+++ b/css/index.css
@@ -12,23 +12,9 @@
     transition: opacity 0.1s ease-in-out;
 }
 
-#bg {
-  position:fixed;
-   top:-50%;
-   left:-50%;
-   width:200%;
-   height:200%;
-}
-
-#bg img {
-   position:absolute;
-   top:0;
-   left:0;
-   right:0;
-   bottom:0;
-   margin:auto;
-   min-width:50%;
-   min-height:50%;
+body, html {
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #container {
