--- a/css/index.css
+++ b/css/index.css
@@ -3,137 +3,8 @@ body, html {
     overflow-y: hidden;
 }
 
-#container {
-   font-size: 2.5em;
-   font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-   text-align: center;
-   width:100%;
-   height:100%;
-}
-
-.player {
-
-}
-
-.right {
-   float: right;
-   width: 42.5%;
-   margin: 20px 5% 0 2.5%;
-}
-
-.left {
-   float: left;
-   width: 42.5%;
-   margin: 20px 2.5% 0 5%;
-}
-
-label {
-   font-size: 0.8em;
-   display: block;
-   margin: 0 0 20px;
-   padding: 5px 0;
-   opacity: 0.9;
-   background-color: #EEE;
-   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #EEE), color-stop(100%, #CCC));
-   background-image: -webkit-linear-gradient(top, #EEE, #AAA);
-   background-image: -moz-linear-gradient(top, #EEE, #AAA);
-   background-image: -ms-linear-gradient(top, #EEE, #AAA);
-   background-image: -o-linear-gradient(top, #EEE, #AAA);
-   background-image: linear-gradient(top, #EEE, #AAA);
-   border: 1px solid #999;
-   border-bottom: 1px solid #BBB;
-   -webkit-border-radius: 30px;
-   -moz-border-radius: 30px;
-   border-radius: 30px;
-   text-shadow: 0 1px 0 #EEE;
-   background-color: #EEE;
-}
-
-#YourLife {
-   opacity: 0.9;
-   background-color: #EEE;
-   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #EEE), color-stop(100%, #CCC));
-   background-image: -webkit-linear-gradient(top, #EEE, #AAA);
-   background-image: -moz-linear-gradient(top, #EEE, #AAA);
-   background-image: -ms-linear-gradient(top, #EEE, #AAA);
-   background-image: -o-linear-gradient(top, #EEE, #AAA);
-   background-image: linear-gradient(top, #EEE, #AAA);
-   border: 1px solid #999;
-   border-bottom: 1px solid #BBB;
-   -webkit-border-radius: 30px;
-   -moz-border-radius: 30px;
-   border-radius: 30px;
-   color: #333;
-   font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-   padding: 8px 0;
-   text-align: center;
-   text-shadow: 0 1px 0 #EEE;
-}
-
-#YourCount {
-   text-align: center;
-   font-size: 2em;
-
-}
-
-#YourUp {
-  display: block;
-   text-align: center;
-   border-bottom: 1px solid #999;
-   padding: 10px 0;
-}
-
-#YourDown {
-  display: block;
-   text-align: center;
-   border-top: 1px solid #999;
-   padding: 10px 0;
-}
-
-#EnemyLife {
-   opacity: 0.9;
-   background-color: #EEE;
-   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #EEE), color-stop(100%, #CCC));
-   background-image: -webkit-linear-gradient(top, #EEE, #AAA);
-   background-image: -moz-linear-gradient(top, #EEE, #AAA);
-   background-image: -ms-linear-gradient(top, #EEE, #AAA);
-   background-image: -o-linear-gradient(top, #EEE, #AAA);
-   background-image: linear-gradient(top, #EEE, #AAA);
-   border: 1px solid #999;
-   border-bottom: 1px solid #BBB;
-   -webkit-border-radius: 30px;
-   -moz-border-radius: 30px;
-   border-radius: 30px;
-   color: #333;
-   font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
-   padding: 8px 0;
-   text-align: center;
-   text-shadow: 0 1px 0 #EEE;
-
-}
-
-#EnemyCount {
-   text-align: center;
-   font-size: 2em;
-
-}
-
-#EnemyUp {
-  display: block;
-   text-align: center;
-   border-bottom: 1px solid #999;
-   padding: 10px 0;
-
-}
-
-#EnemyDown {
-  display: block;
-   text-align: center;
-   border-top: 1px solid #999;
-   padding: 10px 0;
-
-}
-
-#YourUp, #YourDown, #EnemyUp, #EnemyDown, #YourUp, #YourDown, #EnemyUp, #EnemyDown {
-   opacity: 0.5;
+.col {
+  background-image: url(../img/island.png);
+  background-size: cover;
+  overflow: hidden;
 }
