--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,11 @@
 body, html {
-    overflow-x: hidden;
-    overflow-y: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .container-fluid {
   width: 100%;
+  height: 100%;
   margin-right: auto;
   margin-left: auto;
 }
@@ -41,4 +42,10 @@ body, html {
   resize: none;
   position: center;
   text-align:center;
+}
+
+.player {
+  background-image: url("../img/mountain.png");
+  background-size: cover;
+  background-position: center;
 }
